--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -14,10 +14,11 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY wait-for-db.sh /wait-for-db.sh
-RUN chmod +x /wait-for-db.sh
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /wait-for-db.sh /entrypoint.sh
 
 COPY . .
 
 EXPOSE 8000
 
-CMD ["/wait-for-db.sh", "python", "manage.py", "runserver", "0.0.0.0:8000"]
+ENTRYPOINT ["/entrypoint.sh"]
