--- a/master/my.cnf
+++ b/master/my.cnf
@@ -2,4 +2,6 @@
 server-id=1
 log-bin=mysql-bin
 binlog_do_db=tasks_db
+enforce-gtid-consistency=ON
+gtid-mode=ON
 default_authentication_plugin=mysql_native_password
