--- a/slave2/my.cnf
+++ b/slave2/my.cnf
@@ -1,6 +1,8 @@
 [mysqld]
 server-id=3
-log-bin=mysql-bin
 relay-log=relay-bin
+log-bin=mysql-bin
 binlog_do_db=tasks_db
+enforce-gtid-consistency=ON
+gtid-mode=ON
 default_authentication_plugin=mysql_native_password
